k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: testlookup
  labels:
    app.kubernetes.io/name: testlookup
    app.kubernetes.io/managed-by: kustomize
